# atlas-forecast

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Run_in_Colab.ipynb
src/atlasforecast/: __init__.py  backtest.py  cli.py  data.py  inventory.py  metrics.py  models.py  pipeline.py
tests/: test_atlasforecast.py
