[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasforecast"
version = "0.1.0"
description = "Multi-model demand forecasting + inventory-optimization decision engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akshay Birla" }]
dependencies = ["scikit-learn>=1.3", "numpy>=1.24"]

[project.optional-dependencies]
dl = ["tensorflow>=2.12"]
ui = ["streamlit>=1.30", "pandas>=2.0", "plotly>=5.18"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
atlasforecast = "atlasforecast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
